--- a/_includes/header.html
+++ b/_includes/header.html
@@ -137,8 +137,11 @@
           <li>
             <a href="/guide/office/">Office</a>
           </li>
-           <li>
+          <li>
             <a href="/guide/blooming/">Bloom & Skill Tree</a>
+          </li>
+          <li>
+            <a href="/guide/unexplored/">Unexplored</a>
           </li>
         </ul>
         <h3 class="section__header">Tools</h3>
