Mobile friendly tooltip
Script created via https://bundlejs.com/

import tippy from 'tippy.js';

tippy(document.querySelectorAll(".tippy"), {
  content(ref) {return ref.dataset.content},
  allowHTML: true,
  interactive: true,
});

--- a/_includes/chara-affiliation.html
+++ b/_includes/chara-affiliation.html
@@ -2,7 +2,7 @@
 {% if include.masked %}
 ???
 {% elsif a %}
-<abbr title="{{ include.affiliation }}">{{ a.en }}</abbr>
+<abbr class="tippy" data-content="{{ include.affiliation }}">{{ a.en }}</abbr>
 {% else %}
 {{ include.affiliation }}
 {% endif %}
