--- a/_includes/item-icon.html
+++ b/_includes/item-icon.html
@@ -3,7 +3,7 @@
 {%- if rewardType == 3 %}
 {%- assign item = site.data.ItemMaster[id] -%}
 {%- assign itemWiki = site.data.wiki.Item[include.id] -%}
-<span class="item" title="{{ itemWiki.description | default: item.description }}"><img src="/cdn/Sprite/item_{{ item.resourceName }}.png" loading="lazy"></span>
+<span class="item tippy" data-content="{{ itemWiki.description | default: item.description }}"><img src="/cdn/Sprite/item_{{ item.resourceName }}.png" loading="lazy"></span>
 {%- else %}
 {%- if rewardType == 1 %}
 {%- assign card = site.data.CardMaster[id] %}
