--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -6,6 +6,7 @@
   </nav>
 </footer>
 {% for s in page.additional_scripts %}<script async src="{{ s }}"></script>{% endfor %}
+<script async src="/assets/tippy.js"></script>
 <script async src="/assets/main.js"></script>
 <script async src="/assets/analytics.js"></script>
 </body>
