--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" type="text/css" href="/assets/main.css">
   <link rel="canonical" href="{{ site.url }}{{ page.url | replace: 'index.html', '' }}">
   <style>{% include style/tabs.min.css %}</style>
+  <style>{% include style/tippy.min.css %}</style>
 </head>
 
 <body>
