LAH survey link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content">
     <aside class="wiki-msg">    
-        Looking for more contributors to help with Wiki. If interested, please get in touch in <code>#lah-wiki</code> channel of <a href="https://discord.gg/zpc7PCk">LAH English Discord</a>.
+        LAH 3rd Anniversary is incoming, let's take a LAH <a href="https://forms.gle/Xnub58BNDyZSMPcY9">community survey</a>!
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
