--- a/_includes/chara-illustrator.html
+++ b/_includes/chara-illustrator.html
@@ -1,4 +1,4 @@
-{% assign names = include.illustrator | processVoiceActor %}
+{% assign names = include.override | default: include.illustrator | processVoiceActor %}
 {% for name in names %}
 {% assign en = site.data.wiki.Illustrator[name].en %}
 <a href="/illustrators/#{{ en | default: name | slugify }}">
