Remove survey link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content">
     <aside class="wiki-msg">    
-        LAH 3rd Anniversary is incoming, let's take a LAH <a href="https://forms.gle/Xnub58BNDyZSMPcY9">community survey</a>!
+        Thank you for participating in LAH community survey 2023! Results will be published in Wiki blog soon once ready.
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
