--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@ layout: compress
 <main class="content__area">
 <div class="content">
     <aside class="wiki-msg">    
-        Thank you for participating in LAH community survey 2023! Results will be published in Wiki blog soon once ready.
+        Thank you for participating in LAH community survey 2023! Results are now published in <a href="/blog/2023/community-survey-2023/">wiki blog</a>!
     </aside>
     <aside class="toolbar clearfix">
     <button class="menu-button" title="Open Menu" aria-label="Open Menu">
