--- a/assets/main.scss
+++ b/assets/main.scss
@@ -239,7 +239,7 @@ code, pre {
 blockquote {
   border-left: 3px solid #1de9b6;
   margin: 24px 0;
-  padding: 0 0 0 20px;
+  padding: 12px 12px 1px;
   font-style: italic;
 }
 table {
