--- a/_includes/skill-effect-description.html
+++ b/_includes/skill-effect-description.html
@@ -48,6 +48,7 @@ Gain {{ effect.parameter.value }}% of self's base view
 View cost of self's non-damaging skill changed by {{ effect.parameter.value }}
 {% when "MultipleDefence" %}
 {% if skillEffectJson.filterIds contains 12 %}
+{% assign turnDefinition = "turn" %}
 {% else %}
 {% assign turnDefinition = "next attack" %}
 {% if effect.parameter.value == 0 %}Nullify incoming damage to {{ target }}{% else %}Incoming damage to {{ target }} {% if effect.parameter.value >= 100 %}increased{% else %}reduced{% endif %} by {{ effect.parameter.value | divided_by: 100.0 }}x{% endif %}
@@ -146,7 +147,7 @@ Incoming damage increases by {{ effect.parameter.value }}% to {{ target }}
 Make {{ target }} ignore Taunt
 {% when "TargetMark" %}
 {% assign turnDefinition = "turn" %}
-Apply {{ 123 | status_description }} to {{ target }}
+{{ target }} will have higher chance of being targeted when opponent is in auto action mode
 {% when "NoneEffectElapseTurnDamageAndTurnEnd" %}
 (Remove this effect at the end of turn even if unused){% continue %}
 {% when "AllAttack" %}
