Fix for webkit browsers

--- a/_includes/style/tabs.css
+++ b/_includes/style/tabs.css
@@ -6,8 +6,8 @@ wiki-tabs {
   --space-2: 1rem;
   --space-3: 1.5rem;
 
-  display: flex;
-  flex-direction: column;
+  display: block;
+  /* flex-direction: column; */
 
   /* establish primary containing box */
   overflow: hidden;
