Add list of heroes with skill tree

--- a/_includes/item.html
+++ b/_includes/item.html
@@ -4,6 +4,8 @@
 {%- assign item = site.data.ItemMaster[id] -%}
 {%- assign itemWiki = site.data.wiki.Item[include.id] -%}
 <span class="item tippy" data-content="{{ itemWiki.description | default: item.description }}"><img src="/cdn/Sprite/item_{{ item.resourceName }}.png" loading="lazy"> {{ itemWiki.name | default: item.itemName }}</span>
+{%- elsif rewardType == 10 %}
+Skill evolution
 {%- else %}
 {{ id | divided_by: 10 | stockIdToLink: rewardType }}
 {%- endif %}
