--- a/_includes/skill-description.html
+++ b/_includes/skill-description.html
@@ -1,5 +1,5 @@
 {% assign skillOverride = site.data.wiki.SkillManualOverride[include.skillId] %}
-{% if skillOverride %}{{ skillOverride }}{% else %}
+{% if skillOverride %}{{ skillOverride | render_liquid }}{% else %}
 
 {% assign randomGroups = include.skill.effects | group_by: "randomGroupId" %}
 
