temp skill timing

--- a/_includes/skill-timing.html
+++ b/_includes/skill-timing.html
@@ -41,6 +41,8 @@ when invoker's attack causes damage to enemy
 Always active
 {% when 22 %}
 when receiving damage
+{% when 24 %}
+Always active
 {% when 27 %}
 current action end
 {% else %}
