--- a/_includes/skill-effect-description-v2.html
+++ b/_includes/skill-effect-description-v2.html
@@ -140,7 +140,7 @@ Perform {{ effect.parameter.value }} more action(s)
   {% else %}
     Reduce
   {% endif %}
-  {% if effect.parameter.statusId != 0 %}
+  {% if effect.statusId != 0 %}
     {{ effect.parameter.statusId | status_description }}
   {% else %}
     {% if effect.parameter.statusTypeValue == 1 %}buff{% else %}debuff{% endif %} status effect
