Allow skillEffectJson and effects in Status description tpl

--- a/_includes/skill-effect-description-v2.html
+++ b/_includes/skill-effect-description-v2.html
@@ -63,7 +63,7 @@
       {{ skillEffectJson.overrideStatusName }}
     </span> to {{ target }}
   {% else %}
-    {% assign status = skillEffectJson.statusId | status_description %}
+    {% assign status = skillEffectJson.statusId | status_description: skillEffectJson %}
     Apply {{ status }} to {{ target }}
   {% endif %}
 
