Add metadata to voice table

--- a/_includes/voice-table.html
+++ b/_includes/voice-table.html
@@ -5,7 +5,7 @@
 {% assign greeting = "h_gachaResult,s_gachaResult" | split: "," %}
 
 <h2>Voice Lines ({{ names | join: ", " }})</h2>
-<table class="voice-table">
+<table class="voice-table" data-resourceName="{{ include.resourceName | downcase }}">
 {% for n in names %}
   {% assign name = n | upcase | prepend: "_" | append: "_" %}
 
@@ -14,7 +14,7 @@
     {% capture key %}voice_{{ n }}_{{ part }}{% endcapture %}
     {% assign jp_line = site.data.processed.jp_greeting[key] %}
 
-    {% if translated or jp_line %}<tr><th>{{ part | replace: "h_", "Hero " | replace: "s_", "Sidekick " }}</th>
+    {% if translated or jp_line %}<tr><th data-part="{{ part | downcase }}">{{ part | replace: "h_", "Hero " | replace: "s_", "Sidekick " }}</th>
 <td markdown="1" class="translate" data-translate="{% if translated %}{{ jp_line | escape }}{% endif %}">
 {{ translated | default: jp_line }}
 </td></tr>{% endif %}
