--- a/_includes/skill-effect-description-v2.html
+++ b/_includes/skill-effect-description-v2.html
@@ -233,6 +233,8 @@ Make {{ target }} ignore Taunt
 {{ target }} will have higher chance of being targeted when opponent is in auto action mode
 {% when "NoneEffectElapseTurnDamageAndTurnEnd" %}
 (Remove this effect at the end of turn even if unused){% continue %}
+{% when "NoneEffectElapseAfterTurnEnd" %}
+(Remove this effect at the end of turn){% continue %}
 {% when "AllAttack" %}
 View-costing skills for {{ target }} now target all allies/enemies
 {% when "RandomTeamAttack" %}
