Wider content area for some pages

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@ layout: compress
 ---
 {% include header.html %}
 <main class="content__area">
-<div class="content">
+<div class="content{% if page.wide_content %}__wider{% endif %}">
     <aside class="wiki-msg">    
         Thank you for participating in LAH community survey 2023! Results are now published in <a href="/blog/2023/community-survey-2023/">wiki blog</a>!
     </aside>
