--- a/assets/main.scss
+++ b/assets/main.scss
@@ -131,6 +131,9 @@ a:hover {
   margin: 0 auto;
   padding: 0 40px;
 }
+.content__wider {
+  padding: 0 40px;
+}
 .content__overlay {
   background: rgba(0,0,0,0.4);
   width: 100%;
