Fix data file url

--- a/_includes/hero-skill-evolution.html
+++ b/_includes/hero-skill-evolution.html
@@ -4,7 +4,7 @@
 <h2>Skill evolution</h2>
 
 <p>Note to wiki contributor: skill evolution data is saved in
-  <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/blob/master/_includes/hero-skill-evolution.html">this file</a></p>
+  <a href="https://github.com/liveahero-wiki/liveahero-wiki.github.io/blob/master/_data/wiki/HeroSkillEvolution.json">this file</a></p>
 
 {% for evo in heroEvo.evolutions %}
 <h3>Evolution {{ forloop.index }}</h3>
